--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ div[id^="navbar-"] a{
     margin-right: 0.5em;
 }
 
-#register-form{
+form{
     display: grid;
     margin: 1em;
     row-gap: 0.5em;
@@ -38,9 +38,29 @@ button{
     border-color: olive;
 }
 
+.bottom-play{
+    display: grid;
+    justify-content: center;
+}
+
 input{
     background-color: olive;
     border-color: olive;
+}
+
+select{
+    background-color: olive;
+     border-color: olive;
+}
+
+.score{
+    display: grid;
+    justify-content: center;
+}
+
+.paragraphe{
+    display: grid;
+    justify-content: center;
 }
 
 #board{
@@ -55,4 +75,8 @@ input{
     perspective: 100rem;
     position: relative;
     width: 10rem;
+}
+
+.uncover{
+    transform: rotateY(180deg);
 }
